--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-app.cors.allowed-origins=http://localhost:5173
+app.cors.allowed-origins=http://localhost:5173,http://127.0.0.1:5173
